# QA_guru_9.18

with_pip/: requirements.txt  requirements_freeze.txt
with_pipenv/: Pipfile
with_poetry/: pyproject.toml
